# wit-component-model-demo

./: README.md
guest/hello-c/: .gitignore  README.md  hello-c.c
guest/hello-rs/: .gitignore  Cargo.toml  README.md
guest/hello-rs/src/: lib.rs
host/runtime-rs/: Cargo.toml  README.md
host/runtime-rs/src/: main.rs
wit/: demo.wit
